--- a/packages/fetchai/skills/tac_negotiation/skill.yaml
+++ b/packages/fetchai/skills/tac_negotiation/skill.yaml
@@ -1,6 +1,6 @@
 name: tac_negotiation
 author: fetchai
-version: 0.2.0
+version: 0.3.0
 description: The tac negotiation skill implements the logic for an AEA to do fipa
   negotiation in the TAC.
 license: Apache-2.0
@@ -9,16 +9,16 @@ fingerprint:
   __init__.py: QmcgZLvHebdfocqBmbu6gJp35khs6nbdbC649jzUyS86wy
   behaviours.py: QmSgtvb4rD4RZ5H2zQQqPUwBzAeoR6ZBTJ1p33YqL5XjMe
   dialogues.py: QmSVqtbxZvy3R5oJXATHpkjnNekMqHbPY85dTf3f6LqHYs
-  handlers.py: QmbFfDa393bpPWpSBGaiMoenq9c4KBLPGrauu1JY8E2Vu1
+  handlers.py: QmNjp1hY9nD3YxugHwtpRydZ9wKeUUSkgxLmxHoZ65RHAg
   helpers.py: QmXa3aD15jcv3NiEAcTjqrKNHv7U1ZQfES9siknL1kLtbV
   registration.py: QmexnkCCmyiFpzM9bvXNj5uQuxQ2KfBTUeMomuGN9ccP7g
   search.py: QmSTtMm4sHUUhUFsQzufHjKihCEVe5CaU5MGjhzSdPUzDT
-  strategy.py: Qme19rn8NazeYWykH7m3L9hjZNpLQ53pssj1RrctYLdQ9f
+  strategy.py: QmTK9wqubsgBm18Us3UzKNFckmjSprC1dtV7JtFPWGKVgz
   tasks.py: QmbAUngTeyH1agsHpzryRQRFMwoWDmymaQqeKeC3TZCPFi
-  transactions.py: QmTAjc1E13HTrEmSMkfoKgTFyL8uZd1ZDSMktwMf3iduPh
+  transactions.py: QmVQ4e1z6LP2k16J7diTnpsmjQFWkAZwuWtudoJFJpkdXu
 fingerprint_ignore_patterns: []
 contracts:
-- fetchai/erc1155:0.4.0
+- fetchai/erc1155:0.5.0
 protocols:
 - fetchai/fipa:0.3.0
 - fetchai/oef_search:0.2.0
@@ -54,6 +54,8 @@ models:
     class_name: Search
   strategy:
     args:
+      is_contract_tx: false
+      ledger_id: ethereum
       register_as: both
       search_for: both
     class_name: Strategy
