fix doc tests, add separate gh workflow for eth integration tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,4 +8,5 @@ markers =
     integration: marks end-to-end tests which require the oef
     unstable: marks test as unstable
     network: marks tests which require internet access
+    ethereum: marks tests which require ethereum test network
     flaky: marks tests which are flaky and worth re-running
