fix ledger id in erc1155 client skill

--- a/packages/fetchai/skills/erc1155_client/skill.yaml
+++ b/packages/fetchai/skills/erc1155_client/skill.yaml
@@ -38,7 +38,7 @@ models:
     class_name: Dialogues
   strategy:
     args:
-      ledger_id: fetchai
+      ledger_id: ethereum
       search_query:
         constraint_type: ==
         search_term: has_erc1155_contract
