Comments resolved, list items fixed.

--- a/aea/cli_gui/aea_cli_rest.yaml
+++ b/aea/cli_gui/aea_cli_rest.yaml
@@ -133,7 +133,7 @@ paths:
           schema:
             type: string
 
-  /agent/{agent_id}/remove/{item_type}:
+  /agent/{agent_id}/{item_type}/remove:
     post:
       operationId: aea.cli_gui.remove_local_item
       tags:
