--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ ignore_missing_imports = True
 [mypy-oef.*]
 ignore_missing_imports = True
 
-[mypy-jsonschema]
+[mypy-jsonschema.*]
 ignore_missing_imports = True
 
 [mypy-watchdog.*]
