proposal for dialogue models for existing protocols

--- a/examples/protocol_specification_ex/default.yaml
+++ b/examples/protocol_specification_ex/default.yaml
@@ -24,3 +24,10 @@ ct:ErrorCode: |
     }
   ErrorCodeEnum error_code = 1;
 ...
+---
+reply:
+  bytes: [bytes, error]
+  error: []
+roles: {agent}
+end_states: [open, closed]
+...
