--- a/examples/protocol_specification_ex/http.yaml
+++ b/examples/protocol_specification_ex/http.yaml
@@ -19,3 +19,10 @@ speech_acts:
     headers: pt:str
     bodyy: pt:bytes
 ...
+---
+reply:
+  request: [response]
+  response: []
+roles: {client, server}
+end_states: []
+...
