--- a/examples/protocol_specification_ex/tac.yaml
+++ b/examples/protocol_specification_ex/tac.yaml
@@ -57,3 +57,15 @@ ct:ErrorCode: |
   }
   ErrorCodeEnum error_code = 1;
 ...
+---
+reply:
+  register: [tac_error]
+  unregister: [tac_error]
+  transaction: [transaction_confirmation,tac_error]
+  cancelled: []
+  game_data: []
+  transaction_confirmation: []
+  tac_error: []
+roles: {agent, controller}
+end_states: [open, closed]
+...
