make crypto registry more generic and use it for ledger apis as well

--- a/setup.cfg
+++ b/setup.cfg
@@ -141,6 +141,9 @@ ignore_errors = True
 [mypy-packages/fetchai/protocols/tac/tac_pb2]
 ignore_errors = True
 
+[mypy-packages/fetchai/protocols/ledger_api/ledger_api_pb2]
+ignore_errors = True
+
 [mypy-tensorflow.*]
 ignore_missing_imports = True
 
