--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -137,6 +137,7 @@ jobs:
           pip install tox
       - name: Integration tests
         run: tox -e py3.7 -- -m 'integration and not unstable and ethereum'
+        continue-on-error: true
 
   platform_checks:
     runs-on: ${{ matrix.os }}
