--- a/examples/protocol_specification_ex/gym.yaml
+++ b/examples/protocol_specification_ex/gym.yaml
@@ -23,11 +23,14 @@ ct:AnyObject: |
   bytes any = 1;
 ...
 ---
+entry: [reset]
 reply:
+  reset: [status]
+  status: [act, close, reset]
   act: [percept]
-  percept: []
-  reset: []
+  percept: [act, close, reset]
   close: []
+exit: [close]
 roles: {agent, environment}
-end_states: [open, closed]
+end_states: [successful]
 ...
